**1.62.0** - 18.11.2019
* Added auto upgrade buyer (#39)

**1.61.3** - 07.11.2019
Open Source
* Beerplop is open source now. Feel free to contribute.
* Docker development environment
* Open the Bottle Cap Factory at the beginning for an easier start into the game (#70)
* Bugfixes:
    - Add label to main beer (#71)

**1.61.0** - 04.09.2019
The big patch release
* Added a new building to the Beer Factories, the Back Room (#46)
* Added additional achievements
* Added an additional Holy Upgrade
* Added automation of research project restarts
* Automated Bars: Added an upgrade overview (#44)
* Enable sacrifice after reaching the highest possible amount of Plops
* UI polishing:
    - Added a border to the expanded buy automation controls
    - Beer Factory: Aligned expand buttons for non buildable buildings
* Bugfixes:
    - Fix auto buyer/auto level up disabled if plops are invested somewhere else (#52)
    - Bottle Cap Factory purchase and level up button stays active after an automated purchase
    - Total statistics for all buildings contains a cloning priority configuration
    - Page refresh after several modals
        - configuring a custom buy amount
        - Creating a new save state
        - Sacrificing the enchantments of a building
        - Login from a modal
    - Added additional checks to avoid double auto cloning (#61)
    - Achievements and Upgrades don't render
    - After sacrificing the enchantments of a building the enchantment modal doesn't open
    - Checkboxes in game option modal aren't rendered
    - Dragging the screen after sacrificing

**1.60.0** - 26.08.2019
* Added a fast switch navigation to the building detail modal (#60)
* Bugfixes
    - Script loading errors in Edge and Pale Moon (#64)
    - Beer Blender Bar not rendered
    - Save States not accessible (#63)

**1.59.0** - 23.08.2019
* Added a loading screen which displays the component loading state
* Technical improvements:
    - Improved beerwarts auto training performance (#57)